# image-n-crypt

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  MenuClient.py  README.md  app.json  app.py  client.py  config.example.py  config.py  model.py  old_client.py  pyproject.toml  quotient.txt  renovate.json  requirements.txt  rsa.txt  rsa_pub.txt  views.py
auth/: model.py  service.py  views.py
client/: MenuClient.py  api.py  helper.py  helpers.py  main.py  old_client.py  quotient.txt  rsa.txt  rsa_pub.txt
data/: hoppscoth.json  images.chunks.json  images.files.json  images.json  rsa_admin.txt  rsa_admin2.txt  rsa_admin3.txt  users.json
decode_encode/: create_key.py  decode.py  encode.py  function_support.py  rsa.txt  rsa_pub.txt
docker/: docker-compose.yaml
docker/jenkins/: Dockerfile
docker/server/: Dockerfile
helpers/: utils.py
home/: model.py  views.py
jenkins/: Dockerfile
src/: views.py
src/api/: __init__.py  blueprint.py
src/api/auth/: model.py  service.py  views.py
src/api/upload_image/: service.py  views.py
src/api/user/: service.py  views.py
src/api/users/: model.py  service.py  views.py
src/api/users/images/: service.py  views.py
src/api/v1/: blueprint.py
src/api/v1/auth/: doc.py  model.py  service.py  views.py
src/api/v1/jwt/: views.py
src/api/v1/users/: doc.py  model.py  service.py  views.py
src/api/v1/users/images/: doc.py  model.py  service.py  views.py
src/components/auth/: service.py  views.py
src/components/decode_encode/: confirm.py  decode.py  decrypt.py  encode.py  encrypt.py  function_support.py  generate_key.py  rsa_pub.txt
src/components/upload_image/: model.py  service.py  views.py
src/components/user/: service.py  views.py
src/helpers/: utils.py
src/helpers/crypto/: __init__.py  crypto.py
src/utils/: __init__.py  utils.py
templates/: index.html  login.html  register.html  upload_image.html
upload_image/: model.py  service.py  views.py
user/: service.py  views.py
